objects/WIP_Log__c.object
<CustomObject>
    <fields>
        <fullName>BRID__c</fullName>
        <label>BRID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>WIP Logs</relationshipLabel>
        <relationshipName>WIP_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Actioned__c</fullName>
        <label>Date Actioned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Type_Task__c</fullName>
        <label>Service Type Task</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workout__c</fullName>
        <label>Workout</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WIP Log</label>
    <nameField>
        <displayFormat>WIP-{00000000}</displayFormat>
        <label>WIP Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WIP Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>